--- a/index.html
+++ b/index.html
@@ -177,27 +177,19 @@
                 February 2018 – April 2021
             </h6><br>
             <ul>
-                <li>Managed remote cash inventories and monitored insurance cash levels, ensuring banking compliance.
-                </li>
-                <li>Processed double-entry General Ledger credits and debits, while conducting 3-way verifications to
-                    ensure that the sum of these matches the company's assets.
-                </li>
-                <li>Conducted daily accounts reconciliations and worked on resolving discrepancies.</li>
-                <li>Prepared cash funding and returns entries that ensured accurate cash disbursements and collections.
-                <li>Ordered currency for banking centers, remote ATMs, and commercial customers, maintaining accurate
-                    records and reporting.</li>
-                <li>Identified opportunities for process improvements and collaborated with cross-functional teams to
-                    implement changes.</li>
-                <li>Collaborated with management on GL balancing issues that contributed to timely resolutions.
-                </li>
-                <li>Created and managed monthly reporting for senior management that included trend analysis, pareto
-                    charts,
-                    pivot charts and graphs. </li>
-                <li>Created and updated departmental procedure manuals, how-to guides, and various job aids and
-                    worksheets.
-                </li>
-                <li>Played a significant role as a change agent in the re-engineering process of the department that
-                    resulted in process automation and procedures upgrade.</li>
+                <li>Managed incoming and outgoing cash transactions across 24 major vaults and
+                    overseen all account reconciliations.</li>
+                <li>Maintained remote cash inventories and monitored insurance cash levels.</li>
+                <li> Prepared entries for cash funding and cash returns to generate Over and Short
+                    reports.</li>
+                <li>Worked with management to resolve GL balancing issues.</li>
+                <li>Developed and updated departmental procedure manuals.</li>
+                <li>Contributed to process improvement initiatives and supported monthly reporting
+                    to senior management.</li>
+                <li>Ensured insurance cash levels in major vaults complied with banking regulations.</li>
+                <li>Arranged cash orders for banking centers, remote ATMs, and commercial
+                    customers.</li>
+                <li>Handled calls to the Federal Reserve to order coins and currency.</li>
             </ul>
         </div><br><br>
         <div class="professional_experience"><br><br>
@@ -245,7 +237,6 @@
         <div style="clear:both;"></div>
         <br>
         <div class="bg">
-            <!-- <div id="education-container" class="education-container"> -->
             <div class="education-card">
                 <h3>Education</h3>
                 <ul>
@@ -254,12 +245,11 @@
                 </ul>
                 <h3>Courses</h3>
                 <ul>
-                    <li>Web Fundamentals, Coding Dojo at Colorado University &#10020;
-                        May 2021 — February 2022 &#10020;</li>
-                    <li>Python, Coding Dojo at Colorado University &#10020;
-                        May 2021 — February 2022 &#10020;</li>
-                    <li>Six Sigma Yellow Belt, Linked Learning &#10020;
-                        June 2022 — June 2022 &#10020;</li>
+                    <li>Introduction to Financial Accounting, University of Pennsylvania &#10020;
+                        May 2024 — Present &#10020;</li>
+                    <li>Sage 300 Construction and Real Estate – Foundations (Construction edition), Sage
+                        University &#10020;
+                        April 2024 — April 2024 &#10020;</li>
                     <li>Designing User Interfaces and Experiences (UI/UX), IBM &#10020;
                         March 2024 — March 2024 &#10020;</li>
                     <li>Front-End and Web Development (UI/UX), IBM &#10020;
@@ -268,15 +258,14 @@
                         March 2024 — March 2024 &#10020;</li>
                     <li>Introduction to HTML, CSS, & JavaScript, IBM &#10020;
                         March 2024 — March 2024 &#10020;</li>
-                    <li>Sage 300 Construction and Real Estate – Foundations (Construction edition), Sage
-                        University &#10020;
-                        April 2024 — April 2024 &#10020;</li>
-                    <li>Tally Bookkeeper Professional Certificate, Principles of Accounts Payable and
-                        Receivable Management, Coursera &#10020;
-                        May 2024 — Present &#10020;</li>
+                    <li>Six Sigma Yellow Belt, Linked Learning &#10020;
+                        June 2022 — June 2022 &#10020;</li>
+                    <li>Python, Coding Dojo at Colorado University &#10020;
+                        May 2021 — February 2022 &#10020;</li>
+                    <li>Web Fundamentals, Coding Dojo at Colorado University &#10020;
+                        May 2021 — February 2022 &#10020;</li>
                 </ul>
             </div>
-            <!-- </div> -->
         </div>
     </section>
     <div style="clear:both;"></div><br><br><br>
